main/ethtool: upgrade to 5.4

--- a/main/ethtool/APKBUILD
+++ b/main/ethtool/APKBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ethtool
-pkgver=5.3
+pkgver=5.4
 pkgrel=0
 pkgdesc="Utility for controlling network drivers and hardware"
 url="https://mirrors.edge.kernel.org/pub/software/network/ethtool/"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-only"
 makedepends="linux-headers"
 subpackages="$pkgname-doc"
 source="https://www.kernel.org/pub/software/network/ethtool/ethtool-$pkgver.tar.xz"
@@ -27,4 +27,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="ad3651f74850e6773489baec27c51d077e3c080eb1d536a585ae05c618304880caf7598df5c9b1416c47ae9c4eac301032f6ea65fe47650dd9ecb7603c1857b0  ethtool-5.3.tar.xz"
+sha512sums="c7bfe7eae2ba207d710716274e9f5ae275c57d0bebc0a9acb95677125e64f1b42ef610032011fb59894aab46973988bad40fddbc5ccc238893e7da66f913255b  ethtool-5.4.tar.xz"
