--- a/community/seahorse/APKBUILD
+++ b/community/seahorse/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=seahorse
-pkgver=3.34
+pkgver=3.34.1
 pkgrel=0
 pkgdesc="GNOME application for managing PGP keys."
 url="https://projects.gnome.org/seahorse/"
@@ -14,7 +14,7 @@ makedepends="vala libxml2-utils
 	gtk+3.0-dev gcr-dev glib-dev meson ninja
 	cmake libpwquality-dev openldap-dev avahi-dev"
 subpackages="$pkgname-lang $pkgname-doc"
-source="https://download.gnome.org/sources/seahorse/$pkgver/seahorse-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/seahorse/${pkgver%.*}/seahorse-$pkgver.tar.xz"
 
 build() {
 	meson --prefix=/usr builddir
@@ -29,4 +29,4 @@ package() {
 	DESTDIR="$pkgdir" meson install -C builddir
 }
 
-sha512sums="06cbb8982bccabf1cfdcbb9ec7178681ec1b7f210d7401a145506defe90f38a6ef14a643c3c248164aff1e6f6943caa35db05263fc66c42fc1292e925110faf9  seahorse-3.34.tar.xz"
+sha512sums="d2dff7d73a0968c1a5a8d39460f08b67f6794f22812200f564ef719354ab5cc2dac2213cba0d4bc10a455aecb9f55de8ff39943db4482beaac9cfdc2ca1012b8  seahorse-3.34.1.tar.xz"
