community/qemu: add pulseaudio support

--- a/community/qemu/APKBUILD
+++ b/community/qemu/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qemu
 pkgver=4.2.0
-pkgrel=1
+pkgrel=2
 pkgdesc="QEMU is a generic machine emulator and virtualizer"
 url="https://qemu.org/"
 arch="all"
@@ -33,6 +33,7 @@ makedepends="
 	ncurses-dev
 	paxmark
 	perl
+	pulseaudio-dev
 	python3
 	py3-sphinx
 	sdl2-dev
@@ -132,6 +133,7 @@ done
 _modules="
 	audio-alsa
 	audio-oss
+	audio-pa
 	audio-sdl
 	block-curl
 	block-dmg-bz2
@@ -254,7 +256,7 @@ build() {
 	cd "$builddir"/build
 	_compile_common \
 		--disable-linux-user \
-		--audio-drv-list=oss,alsa,sdl \
+		--audio-drv-list=oss,alsa,sdl,pa \
 		--enable-cap-ng \
 		--enable-curl \
 		--enable-curses \
