main/fail2ban: upgrade to 0.11.1

--- a/main/fail2ban/APKBUILD
+++ b/main/fail2ban/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Jeff Bilyk <jbilyk@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=fail2ban
-pkgver=0.10.4
-pkgrel=2
+pkgver=0.11.1
+pkgrel=0
 pkgdesc="Scans log files for login failures then updates iptables to reject originating ip address"
 url="https://www.fail2ban.org"
 arch="noarch"
@@ -11,30 +11,25 @@ license="GPL-2.0-or-later"
 depends="python3 iptables ip6tables logrotate"
 makedepends="python3-dev py3-setuptools bash"
 subpackages="$pkgname-doc $pkgname-openrc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/$pkgname/$pkgname/archive/$pkgver.tar.gz
-		testIpToName-fixed-for-reverse-IP-of-google-dns.patch
+source="$pkgname-$pkgver.tar.gz::https://github.com/fail2ban/fail2ban/archive/$pkgver.tar.gz
+		ec37b1942c4da76f7a0f71efe81bea6835466648.patch
 		fail2ban.confd
 		fail2ban.logrotate
 		alpine-ssh.jaild
 		alpine-sshd.filterd
 		alpine-sshd-ddos.filterd
 		"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	sh fail2ban-2to3
 	python3 setup.py build
 }
 
 check() {
-	cd "$builddir"
 	python3 setup.py test
 }
 
 package() {
-	cd "$builddir"
-
 	python3 setup.py install --root "$pkgdir"
 
 	install -Dm755 files/gentoo-initd "$pkgdir"/etc/init.d/fail2ban
@@ -49,8 +44,8 @@ package() {
 		"$pkgdir"/etc/fail2ban/filter.d/alpine-sshd-ddos.conf
 }
 
-sha512sums="3f4af84b7e3332b887240c927c1f706d2b3020217df2a68c64897619d54eb6dfa972992e3153f4ea150d025e2c8a2b537da47cf71a6dfee1df3c8d029a6d5f42  fail2ban-0.10.4.tar.gz
-e58c2c77c5e02094551e4b6082839e63764a237d8d5ce4924684c15a09648cf6f222108e9e01ad7801da5e2a17b343126b377dbca8c2cd41de60caed1c8342a6  testIpToName-fixed-for-reverse-IP-of-google-dns.patch
+sha512sums="019b088aa6375f98742ed101ef6f65adabca3324444d71d5b8597a8d1d22fa76b9f503660f0498643fe24a3b8e4368de916072a1ab77b8e2ea3eda41c3e0c8c6  fail2ban-0.11.1.tar.gz
+2d57fe7a7e3d1889dfa00ac33f5071069ed62f5fc0edb1e1827aedc47fae3a36d19c568b1721ba3a8e117f4ba6b3756d11942f2320b42864d45203f45761c7b6  ec37b1942c4da76f7a0f71efe81bea6835466648.patch
 1e7581dd04e7777d6fd5c40cc842a7ec5f4e6a0374673d020d89dd61bf4093d48934844bee89bcac9084f9ae44f3beb66e714cf3c2763d79c3e8feb790c5e43b  fail2ban.confd
 4ff9dd2793f42e414d83676104f47966f781b9e042e90dbc839d4e6b27faee08ebea2231b178d1d41084fa6c59aa62689bdb713977096d8b235a33e73268ccc5  fail2ban.logrotate
 84915967ae1276f1e14a5813680ee2ebf081af1ff452a688ae5f9ac3363f4aff90e39f8e6456b5c33d5699917d28a16308797095fd1ef9bb1fbcb46d4cea3def  alpine-ssh.jaild
