--- a/testing/py3-pydocstyle/APKBUILD
+++ b/testing/py3-pydocstyle/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Russ Webber <russ@rw.id.au>
 pkgname="py3-pydocstyle"
 _pkgname="pydocstyle"
-pkgver="4.0.1"
+pkgver="5.0.2"
 pkgrel=1
 pkgdesc="Static analysis tool for checking compliance with Python docstring conventions"
-url="https://pydocstyle.org/"
+url="https://www.pydocstyle.org/"
 arch="noarch"
 license="MIT"
 depends="python3 py3-snowballstemmer"
@@ -26,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="6d1b9d1eb46185a616a6715113542a41f1085296b162da563ed18086addd5f8f14dd30d6460cf105a3b0542fc0823f47214f1b329b9dfa0c4cf211cde700aa19  pydocstyle-4.0.1.tar.gz"
+sha512sums="5ac2e017ae95ff5c7759d6a2cb9ac990f94f668f5fd940792d927cc62628cd036afcf39ab5db6a11100dcca32af344b47f4a7319dd3a47c36367844d0c06d34a  pydocstyle-5.0.2.tar.gz"
