community/ttf-cantarell: upgrade to 0.201

--- a/community/ttf-cantarell/APKBUILD
+++ b/community/ttf-cantarell/APKBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=ttf-cantarell
-pkgver=0.200
-pkgrel=2
+pkgver=0.201
+pkgrel=0
 pkgdesc="Humanist sans-serif font designed for on-screen reading"
 url="https://wiki.gnome.org/Projects/CantarellFonts"
 arch="noarch !s390x"
 license="OFL-1.1 AND Apache-2.0"
-makedepends="meson gettext-dev appstream-glib-dev psautohint py3-fontmath"
+makedepends="meson gettext-dev appstream-glib-dev"
 source="https://download.gnome.org/sources/cantarell-fonts/$pkgver/cantarell-fonts-$pkgver.tar.xz"
 builddir="$srcdir/cantarell-fonts-$pkgver"
 
@@ -26,4 +26,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="44c154c6ca195f8a4bdb3c1f2f6856f03ffce47ef82ea381575e1291db46e6035dc8febd00d9a34800961c4e403d0e4fb9a691ef376d27d3cd883b9ef81a0711  cantarell-fonts-0.200.tar.xz"
+sha512sums="c512244a1ed343b1b9fef3a630c1c678c6ef7f06efcda883af0dbab5478823f31c9bd5fc38b92ad1747704528c6e2589584ab94743f433957644d5386dabdc98  cantarell-fonts-0.201.tar.xz"
