testing/simplesnap: add comments and minor fixup

--- a/testing/simplesnap/APKBUILD
+++ b/testing/simplesnap/APKBUILD
@@ -5,12 +5,12 @@ pkgver=1.0.4
 pkgrel=2
 pkgdesc="Simple and powerful network transmission of ZFS snapshots"
 url="https://github.com/jgoerzen/simplesnap"
-arch="noarch !armhf !armv7"
+arch="noarch !armhf !armv7" # limited by zfs
 license="GPL-3.0-or-later"
 depends="bash coreutils liblockfile openssh-client zfs"
 subpackages="$pkgname-doc"
-options="!check"
-source="$pkgname-$pkgver.tar.gz::https://github.com/jgoerzen/$pkgname/archive/release/$pkgver.tar.gz
+options="!check" # no test suite
+source="$pkgname-$pkgver.tar.gz::https://github.com/jgoerzen/simplesnap/archive/release/$pkgver.tar.gz
 	0001-fix-simplesnap-line-2-dotlockfile-command-not-found.patch
 	0002-trap-do-not-define-ECODE-at-setup.patch
 	0003-use-CHECKHOST-in-checkbackups-function.patch
