community/plasma-desktop: fix broken activities KCM
As recommended by KDE, revert 567f71714faac305947573e307f486a9960cf1d1

--- a/community/plasma-desktop/APKBUILD
+++ b/community/plasma-desktop/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-desktop
 pkgver=5.17.5
-pkgrel=0
+pkgrel=1
 pkgdesc="KDE Plasma Desktop"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url='https://www.kde.org/workspaces/plasmadesktop/'
@@ -47,7 +47,8 @@ depends_dev="
 	"
 makedepends="$depends_dev extra-cmake-modules kdoctools-dev"
 checkdepends="xvfb-run iso-codes"
-source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz"
+source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz
+	revert-fix-jagginess-for-activities-list-icons.patch"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang knetattach"
 options="!check" # Requires running dbus
 
@@ -86,4 +87,5 @@ knetattach() {
 	cd "$builddir"/build/knetattach
 	DESTDIR="$subpkgdir" make install
 }
-sha512sums="c910be6bf63091f14f190e8fbfbd0039aa175d30f7a6870dbd99ffc3ff49a0f77e63e2d3fc9319dab1c650b15108cdaefee470eddab1213afe8d3a149ac64dd4  plasma-desktop-5.17.5.tar.xz"
+sha512sums="c910be6bf63091f14f190e8fbfbd0039aa175d30f7a6870dbd99ffc3ff49a0f77e63e2d3fc9319dab1c650b15108cdaefee470eddab1213afe8d3a149ac64dd4  plasma-desktop-5.17.5.tar.xz
+e4c84c37788bdc0f98f2b6c45ca497a3f8eac5b948ddf034c40ee12af0d1ac88d3ebf64dd146936f4f0f1b295c7fa7f3cd2854f85e2ec3dd546a8ccc716f3bdd  revert-fix-jagginess-for-activities-list-icons.patch"
