community/pflogsumm: remove sysklogd dependency
fixes #11123

--- a/community/pflogsumm/APKBUILD
+++ b/community/pflogsumm/APKBUILD
@@ -1,13 +1,14 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=pflogsumm
 pkgver=1.1.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Pflogsumm is a log analyzer for Postfix logs"
 url="http://jimsun.linxnet.com/postfix_contrib.html"
 arch="noarch"
 license="GPL-2.0-or-later"
-depends="perl perl-date-calc sysklogd"
+depends="perl perl-date-calc"
 subpackages="$pkgname-doc"
+options="!check" # no test suite
 source="http://jimsun.linxnet.com/downloads/pflogsumm-$pkgver.tar.gz"
 
 package() {
