--- a/community/kaccounts-providers/APKBUILD
+++ b/community/kaccounts-providers/APKBUILD
@@ -2,14 +2,15 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kaccounts-providers
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://kde.org/applications/internet/"
 pkgdesc="Small system to administer web accounts for the sites and services across the KDE desktop"
 license="GPL-2.0-or-later"
 depends="kaccounts-integration"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev kio-dev ki18n-dev kdeclarative-dev kpackage-dev kaccounts-integration-dev intltool"
-source="https://download.kde.org/stable/release-service/$pkgver/src/kaccounts-providers-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kaccounts-providers-$pkgver.tar.xz
+	fix-online-accounts-google.patch"
 subpackages="$pkgname-lang"
 
 prepare() {
@@ -32,4 +33,5 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="0bc9be70592f7e9a4e8eecf771f86bc89201a97627e177afe071e8581b1ce5c04a304dd3a0f0667e120b7a32b8d6f34558fa42d03460080c71ebfb84800a4278  kaccounts-providers-19.12.0.tar.xz"
+sha512sums="0bc9be70592f7e9a4e8eecf771f86bc89201a97627e177afe071e8581b1ce5c04a304dd3a0f0667e120b7a32b8d6f34558fa42d03460080c71ebfb84800a4278  kaccounts-providers-19.12.0.tar.xz
+736b84854dad5da887c9d270b8bfe5782ded908c4fa463d7ecfa8218dfdc12956123515e86eb41f75d5427d5ae9c20c194ff5cead62e81afb3bcb59d77235d9c  fix-online-accounts-google.patch"
