community/libcprime: upgrade to 2.8.0

--- a/community/libcprime/APKBUILD
+++ b/community/libcprime/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=libcprime
-pkgver=2.7.1
+pkgver=2.8.0
 pkgrel=0
 pkgdesc="A library for bookmarking, saving recent activities, managing settings of CoreApps."
 arch="all"
 url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtbase libnotify"
-makedepends="qt5-qtbase-dev libcprime-dev qt5-qtconnectivity-dev"
+makedepends="qt5-qtbase-dev libcprime-dev"
 source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/libcprime/-/archive/v$pkgver/libcprime-v$pkgver.tar.gz"
 subpackages="$pkgname-dev"
 builddir="$srcdir/$pkgname-v$pkgver"
@@ -22,4 +22,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="c4417a2abe162ae1db07bc173eab7d4c2ebb6ad6364463f772a7b19ca0034b5e996f081a1ef84db3a094369d65bb6227036d0f11e0a003b3104faada7de975e9  libcprime-2.7.1.tar.gz"
+sha512sums="fa3d5b03605a7b19e31b240c334b35b3a22d98c1f4d57c426b155ab29918cc8959dbdaad326806541016427705e3463c5158136ad561ad57a521eac568cf7046  libcprime-2.8.0.tar.gz"
