community/kde-frameworks: disable on armhf
extra-cmake-modules is not available on armhf due to it's dependency on
qt5-qtdeclarative2, and since all packages in KDE Frameworks depend on
extra-cmake-modules, just disable them all for that arch

--- a/community/attica/APKBUILD
+++ b/community/attica/APKBUILD
@@ -5,7 +5,7 @@ pkgver=5.66.0
 pkgrel=0
 pkgdesc="Freedesktop OCS binding for Qt"
 url="http://www.kde.org/"
-arch="all"
+arch="all !armhf" # Blocked by extra-cmake-modules
 license="LGPL-2.0-or-later"
 makedepends="qt5-qttools-dev extra-cmake-modules doxygen"
 subpackages="$pkgname-dev $pkgname-doc"
