--- a/community/frameworkintegration/APKBUILD
+++ b/community/frameworkintegration/APKBUILD
@@ -4,7 +4,7 @@ pkgname=frameworkintegration
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Framework providing components to allow applications to integrate with a KDE Workspace"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev kconfig-dev kconfigwidgets-dev kiconthemes-dev knotifications-dev knewstuff-dev kwidgetsaddons-dev kpackage-dev ki18n-dev appstream-dev"
