--- a/community/kbookmarks/APKBUILD
+++ b/community/kbookmarks/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kbookmarks
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Support for bookmarks and the XBEL format"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev kconfig-dev kcoreaddons-dev kcodecs-dev kconfigwidgets-dev kwidgetsaddons-dev kxmlgui-dev"
