--- a/community/kcodecs/APKBUILD
+++ b/community/kcodecs/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kcodecs
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Provide a collection of methods to manipulate strings using various encodings"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND LGPL-2.1-or-later"
 makedepends="extra-cmake-modules qt5-qttools-dev gperf doxygen"
