--- a/community/kconfigwidgets/APKBUILD
+++ b/community/kconfigwidgets/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kconfigwidgets
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Widgets for KConfig"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND LGPL-2.1-or-later"
 depends_dev="kauth-dev kcoreaddons-dev kcodecs-dev kconfig-dev kguiaddons-dev ki18n-dev kwidgetsaddons-dev"
