--- a/community/kcontacts/APKBUILD
+++ b/community/kcontacts/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kcontacts
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Address book API for KDE"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later"
 depends="iso-codes"
