--- a/community/kcoreaddons/APKBUILD
+++ b/community/kcoreaddons/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kcoreaddons
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Addons to QtCore"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends_dev="qt5-qtbase-dev"
