--- a/community/kcrash/APKBUILD
+++ b/community/kcrash/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kcrash
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Support for application crash analysis and bug report from apps"
-arch="all"
+arch="all !armhf"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="kcoreaddons-dev kwindowsystem-dev"
