--- a/community/kdbusaddons/APKBUILD
+++ b/community/kdbusaddons/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kdbusaddons
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Addons to QtDBus"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 makedepends="extra-cmake-modules qt5-qttools-dev doxygen shared-mime-info"
