--- a/community/kded/APKBUILD
+++ b/community/kded/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kded
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Extensible deamon for providing system level services"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev kconfig-dev kcoreaddons-dev kcrash-dev kdbusaddons-dev kservice-dev"
