--- a/community/kdesignerplugin/APKBUILD
+++ b/community/kdesignerplugin/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kdesignerplugin
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Integration of Frameworks widgets in Qt Designer/Creator"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only"
 depends_dev="kcoreaddons-dev kconfig-dev kcompletion-dev kconfigwidgets-dev kiconthemes-dev kio-dev kitemviews-dev kplotting-dev ktextwidgets-dev kwidgetsaddons-dev kxmlgui-dev sonnet-dev"
