--- a/community/kdesu/APKBUILD
+++ b/community/kdesu/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kdesu
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Integration with su for elevated privileges"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only"
 depends_dev="kcoreaddons-dev ki18n-dev kservice-dev kpty-dev"
