--- a/community/kdewebkit/APKBUILD
+++ b/community/kdewebkit/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kdewebkit
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Integration of the HTML rendering engine WebKit"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtwebkit-dev kconfig-dev kcoreaddons-dev kio-dev kjobwidgets-dev kparts-dev kservice-dev kwallet-dev qt5-qttools-dev"
