--- a/community/kiconthemes/APKBUILD
+++ b/community/kiconthemes/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kiconthemes
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Support for icon themes"
-arch="all"
+arch="all !armhf"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only"
 depends_dev="qt5-qtsvg-dev karchive-dev ki18n-dev kcoreaddons-dev kconfigwidgets-dev kwidgetsaddons-dev kitemviews-dev"
