--- a/community/kitemviews/APKBUILD
+++ b/community/kitemviews/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kitemviews
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Widget addons for Qt Model/View"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="GPL-2.0-only AND LGPL-2.1-only"
 depends_dev="qt5-qtbase-dev"
