--- a/community/kjs/APKBUILD
+++ b/community/kjs/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kjs
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Support for JS scripting in applications"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later AND BSD-3-Clause AND MIT"
 depends_dev="qt5-qtbase-dev perl-dev pcre-dev"
