--- a/community/kpackage/APKBUILD
+++ b/community/kpackage/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kpackage
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Framework that lets applications manage user installable packages of non-binary assets"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev karchive-dev ki18n-dev kcoreaddons-dev"
