--- a/community/kross/APKBUILD
+++ b/community/kross/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kross
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Framework for scripting KDE applications"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev qt5-qttools-dev kcompletion-dev kcoreaddons-dev ki18n-dev kiconthemes-dev kio-dev kparts-dev kwidgetsaddons-dev kxmlgui-dev"
