--- a/community/ktextwidgets/APKBUILD
+++ b/community/ktextwidgets/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ktextwidgets
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Advanced text editing widgets"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtspeech-dev kcompletion-dev kconfig-dev kconfigwidgets-dev ki18n-dev kiconthemes-dev kservice-dev kwidgetsaddons-dev kwindowsystem-dev sonnet-dev"
