--- a/community/kwallet/APKBUILD
+++ b/community/kwallet/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kwallet
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Secure and unified container for user passwords"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="libgcrypt-dev kcoreaddons-dev kconfig-dev kwindowsystem-dev ki18n-dev kconfigwidgets-dev kdbusaddons-dev kiconthemes-dev knotifications-dev kservice-dev"
