--- a/community/kxmlgui/APKBUILD
+++ b/community/kxmlgui/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kxmlgui
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="User configurable main windows"
-arch="all"
+arch="all !armhf"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev kcoreaddons-dev kitemviews-dev kconfig-dev kconfigwidgets-dev ki18n-dev kiconthemes-dev ktextwidgets-dev kwidgetsaddons-dev kwindowsystem-dev attica-dev kglobalaccel-dev"
