--- a/community/kxmlrpcclient/APKBUILD
+++ b/community/kxmlrpcclient/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kxmlrpcclient
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="XML-RPC client library for KDE"
-arch="all"
+arch="all !armhf"
 url="https://projects.kde.org/projects/kde/pim/kxmlrpcclient"
 license="BSD-2-Clause"
 depends_dev="ki18n-dev kio-dev"
