--- a/community/oxygen-icons/APKBUILD
+++ b/community/oxygen-icons/APKBUILD
@@ -4,7 +4,7 @@ pkgname=oxygen-icons
 _pkgname=oxygen-icons5
 pkgver=5.66.0
 pkgrel=0
-arch="noarch"
+arch="noarch !armhf" # # armhf blocked by extra-cmake-modules
 pkgdesc="Oxygen icon theme"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
