--- a/community/syndication/APKBUILD
+++ b/community/syndication/APKBUILD
@@ -4,7 +4,7 @@ pkgname=syndication
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="An RSS/Atom parser library"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later AND BSD-3-Clause"
 depends_dev="qt5-qtbase-dev kcodecs-dev"
