--- a/community/kapidox/APKBUILD
+++ b/community/kapidox/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kapidox
 pkgver=5.66.0
 pkgrel=0
-arch="noarch"
+arch="noarch !armhf" # armhf blocked by extra-cmake-modules
 pkgdesc="Scripts and data for building API documentation (dox) in a standard format and style"
 url="https://community.kde.org/Frameworks"
 license="BSD-3-Clause"
