--- a/community/kauth/APKBUILD
+++ b/community/kauth/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kauth
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Abstraction to system policy and authentication features"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev kcoreaddons-dev polkit-qt-1-dev"
