--- a/community/kcalendarcore/APKBUILD
+++ b/community/kcalendarcore/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kcalendarcore
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="The KDE calendar access library"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev libical-dev"
