--- a/community/kcompletion/APKBUILD
+++ b/community/kcompletion/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kcompletion
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Text completion helpers and widgets"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="kwidgetsaddons-dev kconfig-dev"
