--- a/community/kconfig/APKBUILD
+++ b/community/kconfig/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kconfig
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Configuration system"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later AND LGPL-2.0-only AND LGPL-2.1-or-later"
 makedepends="extra-cmake-modules qt5-qttools-dev doxygen"
