--- a/community/kdelibs4support/APKBUILD
+++ b/community/kdelibs4support/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kdelibs4support
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Porting aid from KDELibs4"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later AND MIT AND LGPL-2.1-only AND LGPL-2.0-only AND (LGPL-2.1-only OR LGPL-3.0-only) AND (LGPL-2.0-only OR LGPL-3.0-only)"
 depends_dev="qt5-qtbase-dev qt5-qttools-dev kcompletion-dev kconfig-dev kconfigwidgets-dev kcrash-dev kdesignerplugin kdesignerplugin-dev kglobalaccel-dev kemoticons-dev kguiaddons-dev ki18n-dev kiconthemes-dev kio-dev knotifications-dev kparts-dev kservice-dev ktextwidgets-dev kunitconversion-dev kwidgetsaddons-dev kwindowsystem-dev kxmlgui-dev kdbusaddons-dev kded-dev kinit-dev perl-uri"
