--- a/community/kdnssd/APKBUILD
+++ b/community/kdnssd/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kdnssd
 pkgver=5.66.0
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 pkgdesc="Network service discovery using Zeroconf"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later"
