--- a/community/kemoticons/APKBUILD
+++ b/community/kemoticons/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kemoticons
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Support for emoticons and emoticons themes"
-arch="all"
+arch="all !armhf"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends_dev="karchive-dev kconfig-dev kservice-dev kcoreaddons-dev"
