--- a/community/kfilemetadata/APKBUILD
+++ b/community/kfilemetadata/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kfilemetadata
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="A library for extracting file metadata"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends_dev="qt5-qtbase-dev karchive-dev kcoreaddons-dev ki18n-dev kconfig-dev exiv2-dev taglib-dev ffmpeg-dev attr-dev"
