--- a/community/kglobalaccel/APKBUILD
+++ b/community/kglobalaccel/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kglobalaccel
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Add support for global workspace shortcuts"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtx11extras-dev kconfig-dev kcoreaddons-dev kcrash-dev kdbusaddons-dev kwindowsystem-dev"
