--- a/community/khtml/APKBUILD
+++ b/community/khtml/APKBUILD
@@ -4,7 +4,7 @@ pkgname=khtml
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="The KDE HTML library, ancestor of WebKit"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later AND LGPL-2.1-only"
 depends_dev="qt5-qtbase-dev perl-dev giflib-dev libjpeg-turbo-dev karchive-dev kcodecs-dev kglobalaccel-dev ki18n-dev kiconthemes-dev kio-dev kjs-dev knotifications-dev kparts-dev sonnet-dev ktextwidgets-dev kwallet-dev kwidgetsaddons-dev kwindowsystem-dev kxmlgui-dev"
