--- a/community/kidletime/APKBUILD
+++ b/community/kidletime/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kidletime
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Monitoring user activity"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-only"
 depends_dev="qt5-qtx11extras-dev"
