--- a/community/kimageformats/APKBUILD
+++ b/community/kimageformats/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kimageformats
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Image format plugins for Qt5"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 makedepends="qt5-qtbase-dev karchive-dev extra-cmake-modules openexr-dev"
