--- a/community/kinit/APKBUILD
+++ b/community/kinit/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kinit
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Process launcher to speed up launching KDE applications"
-arch="all"
+arch="all !armhf"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtbase-dev libcap-dev kservice-dev kio-dev ki18n-dev kwindowsystem-dev kcrash-dev kconfig-dev"
