--- a/community/kio/APKBUILD
+++ b/community/kio/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kio
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Resource and network access abstraction"
-arch="all"
+arch="all !armhf"
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND LGPL-2.1-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends_dev="qt5-qtscript-dev karchive-dev kconfig-dev kcoreaddons-dev
