--- a/community/kitemmodels/APKBUILD
+++ b/community/kitemmodels/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kitemmodels
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Models for Qt Model/View system"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-only AND LGPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev"
