--- a/community/kjobwidgets/APKBUILD
+++ b/community/kjobwidgets/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kjobwidgets
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Widgets for tracking KJob instances"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends_dev="qt5-qtx11extras-dev kcoreaddons-dev kwidgetsaddons-dev"
