--- a/community/knotifications/APKBUILD
+++ b/community/knotifications/APKBUILD
@@ -4,7 +4,7 @@ pkgname=knotifications
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Abstraction for system notifications"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtbase-dev qt5-qtspeech-dev qt5-qtx11extras-dev kwindowsystem-dev kconfig-dev kcodecs-dev kcoreaddons-dev phonon-dev"
