--- a/community/knotifyconfig/APKBUILD
+++ b/community/knotifyconfig/APKBUILD
@@ -4,7 +4,7 @@ pkgname=knotifyconfig
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Configuration system for KNotify"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-only"
 depends_dev="kcompletion-dev kconfig-dev ki18n-dev kio-dev"
