--- a/community/kplotting/APKBUILD
+++ b/community/kplotting/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kplotting
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Lightweight plotting framework"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev"
