--- a/community/krunner/APKBUILD
+++ b/community/krunner/APKBUILD
@@ -4,7 +4,7 @@ pkgname=krunner
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Framework for providing different actions given a string query"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev kconfig-dev kcoreaddons-dev ki18n-dev kio-dev
