--- a/community/kservice/APKBUILD
+++ b/community/kservice/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kservice
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Advanced plugin and service introspection"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only AND LGPL-2.1-or-later"
 depends_dev="kconfig-dev kcoreaddons-dev kcrash-dev kdbusaddons-dev ki18n-dev"
