--- a/community/ktexteditor/APKBUILD
+++ b/community/ktexteditor/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ktexteditor
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Advanced embeddable text editor"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-or-later AND (LGPL-2.0-only OR LGPL-3.0-only)"
 depends_dev="karchive-dev kconfig-dev kguiaddons-dev ki18n-dev kio-dev kparts-dev sonnet-dev kiconthemes-dev syntax-highlighting-dev kauth-dev"
