--- a/community/kwayland/APKBUILD
+++ b/community/kwayland/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kwayland
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Qt-style Client and Server library wrapper for the Wayland libraries"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtbase-dev wayland-dev"
