--- a/community/kwidgetsaddons/APKBUILD
+++ b/community/kwidgetsaddons/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kwidgetsaddons
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Addons to QtWidgets"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="GPL-2.0-only AND LGPL-2.1-only AND Unicode-DFS-2016"
 depends_dev="qt5-qtbase-dev"
