--- a/community/kwindowsystem/APKBUILD
+++ b/community/kwindowsystem/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kwindowsystem
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Access to the windowing system"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="MIT AND (LGPL-2.1-only OR LGPL-3.0-only"
 depends_dev="qt5-qtx11extras-dev"
