--- a/community/networkmanager-qt/APKBUILD
+++ b/community/networkmanager-qt/APKBUILD
@@ -4,7 +4,7 @@ pkgname=networkmanager-qt
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Qt wrapper for NetworkManager API"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends="networkmanager"
