--- a/community/sonnet/APKBUILD
+++ b/community/sonnet/APKBUILD
@@ -4,7 +4,7 @@ pkgname=sonnet
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Spelling framework for Qt5"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only"
 depends_dev="qt5-qtbase"
