--- a/community/syntax-highlighting/APKBUILD
+++ b/community/syntax-highlighting/APKBUILD
@@ -4,7 +4,7 @@ pkgname=syntax-highlighting
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Syntax highlighting engine for structured text and code"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="MIT"
 depends_dev="qt5-qtbase-dev"
