community/plasma*: disable on armhf

--- a/community/breeze-grub/APKBUILD
+++ b/community/breeze-grub/APKBUILD
@@ -4,7 +4,7 @@ pkgname=breeze-grub
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Breeze theme for GRUB"
-arch="noarch !s390x" # Limited by s390x
+arch="noarch !s390x !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-3.0-or-later"
 depends="grub"
