--- a/community/breeze-gtk/APKBUILD
+++ b/community/breeze-gtk/APKBUILD
@@ -4,7 +4,7 @@ pkgname=breeze-gtk
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="A GTK Theme Built to Match KDE's Breeze"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-only"
 depends="gtk-engines"
