--- a/community/drkonqi/APKBUILD
+++ b/community/drkonqi/APKBUILD
@@ -4,7 +4,7 @@ pkgname=drkonqi
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Manages the power consumption settings of a Plasma Shell"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtx11extras-dev ki18n-dev kcoreaddons-dev kservice-dev kconfigwidgets-dev kjobwidgets-dev kio-dev kcrash-dev kcompletion-dev kxmlrpcclient-dev kwidgetsaddons-dev kwallet-dev knotifications-dev kidletime-dev"
