--- a/community/ksshaskpass/APKBUILD
+++ b/community/ksshaskpass/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ksshaskpass
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="ssh-add helper that uses kwallet and kpassworddialog"
-arch="all !armhf" #qtdeclarative
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev kcoreaddons-dev ki18n-dev kwallet-dev kwidgetsaddons-dev kdoctools-dev"
