--- a/community/ksysguard/APKBUILD
+++ b/community/ksysguard/APKBUILD
@@ -4,7 +4,7 @@ pkgname=ksysguard
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Track and control the processes running in your system"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://userbase.kde.org/KSysGuard"
 license="GPL-2.0-only"
 makedepends="extra-cmake-modules kconfig-dev kcoreaddons-dev kdbusaddons-dev kdoctools-dev ki18n-dev kiconthemes-dev kinit-dev kitemviews-dev kio-dev knewstuff-dev knotifications-dev kwindowsystem-dev libksysguard-dev"
