--- a/community/kwallet-pam/APKBUILD
+++ b/community/kwallet-pam/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kwallet-pam
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="KWallet PAM integration"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-or-later"
 makedepends="extra-cmake-modules linux-pam-dev libgcrypt-dev socat kwallet-dev"
