--- a/community/kwayland-integration/APKBUILD
+++ b/community/kwayland-integration/APKBUILD
@@ -5,7 +5,7 @@ pkgver=5.17.5
 pkgrel=0
 pkgdesc="KWayland integration"
 url="https://www.kde.org/workspaces/plasmadesktop/"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 license="LGPL-2.1-only OR LGPL-3.0-only"
 depends="kwayland kglobalaccel kidletime"
 makedepends="cmake extra-cmake-modules qt5-qtbase-dev kwayland-dev kwindowsystem-dev kidletime-dev kguiaddons-dev"
