--- a/community/xdg-desktop-portal-kde/APKBUILD
+++ b/community/xdg-desktop-portal-kde/APKBUILD
@@ -4,8 +4,8 @@ pkgname=xdg-desktop-portal-kde
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="A backend implementation for xdg-desktop-portal that is using Qt/KDE"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://phabricator.kde.org/source/xdg-desktop-portal-kde"
-arch="all"
 license="LGPL-2.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev glib-dev kio-dev kwayland-dev libepoxy-dev
 	pipewire-dev kcoreaddons xdg-desktop-portal cups-dev"
