--- a/community/breeze-icons/APKBUILD
+++ b/community/breeze-icons/APKBUILD
@@ -4,7 +4,7 @@ pkgname=breeze-icons
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Breeze icon themes"
-arch="noarch"
+arch="noarch !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-3.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev"
