--- a/community/breeze-plymouth/APKBUILD
+++ b/community/breeze-plymouth/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=breeze-plymouth
 pkgver=5.17.5
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://kde.org/"
 pkgdesc="Breeze theme for Plymouth"
 license="GPL-2.0-or-later"
