--- a/community/kinfocenter/APKBUILD
+++ b/community/kinfocenter/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kinfocenter
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="A utility that provides information about a computer system"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/system/kinfocenter"
 license="(GPL-2.0-only OR GPL-3.0-only) AND (LGPL-2.1-only OR LGPL-3.0-only)"
 makedepends="extra-cmake-modules qt5-qtbase-dev kcompletion-dev kconfig-dev kconfigwidgets-dev kcoreaddons-dev kcrash-dev kdbusaddons-dev kdoctools-dev ki18n-dev kiconthemes-dev kcmutils-dev kio-dev kservice-dev solid-dev kwidgetsaddons-dev kwindowsystem-dev kxmlgui-dev kdeclarative-dev kpackage-dev solid-dev kwayland-dev glu-dev"
