--- a/community/kscreen/APKBUILD
+++ b/community/kscreen/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kscreen
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="KDE's screen management software"
-arch="all !armhf" # qtdeclarative
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 depends="hicolor-icon-theme"
