--- a/community/oxygen/APKBUILD
+++ b/community/oxygen/APKBUILD
@@ -4,7 +4,7 @@ pkgname=oxygen
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Artwork, styles and assets for the Oxygen visual style for the Plasma Desktop"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="LGPL-2.1-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev ki18n-dev kconfig-dev kguiaddons-dev kwidgetsaddons-dev kservice-dev kcompletion-dev frameworkintegration-dev kwindowsystem-dev xcb-util-dev kwayland-dev kcmutils-dev kdecoration-dev"
