--- a/community/plasma-browser-integration/APKBUILD
+++ b/community/plasma-browser-integration/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-browser-integration
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Components necessary to integrate browsers into the Plasma Desktop"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Plasma/Browser_Integration"
 license="GPL-3.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev kio-dev ki18n-dev kconfig-dev kdbusaddons-dev knotifications-dev krunner-dev kactivities-dev purpose-dev kfilemetadata-dev"
