--- a/community/plasma-vault/APKBUILD
+++ b/community/plasma-vault/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-vault
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Plasma applet and services for creating encrypted vaults"
-arch="all !armhf"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="(GPL-2.0-only OR GPL-3.0-only) AND (LGPL-2.1-only AND LGPL-3.0-only)"
 makedepends="extra-cmake-modules qt5-qtbase-dev kactivities-dev kconfig-dev kconfigwidgets-dev kcoreaddons-dev kdbusaddons-dev ki18n-dev kio-dev plasma-framework-dev kwidgetsaddons-dev networkmanager-qt-dev libksysguard-dev"
