--- a/community/plasma-workspace-wallpapers/APKBUILD
+++ b/community/plasma-workspace-wallpapers/APKBUILD
@@ -4,7 +4,7 @@ pkgname=plasma-workspace-wallpapers
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Wallpapers for the Plasma Workspace"
-arch="noarch"
+arch="noarch !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 makedepends="extra-cmake-modules"
