--- a/community/plymouth-kcm/APKBUILD
+++ b/community/plymouth-kcm/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=plymouth-kcm
 pkgver=5.17.5
 pkgrel=0
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://cgit.kde.org/plymouth-kcm.git"
 pkgdesc="KCM to manage the Plymouth (Boot) theme"
 license="GPL-2.0-or-later"
