--- a/community/polkit-kde-agent-1/APKBUILD
+++ b/community/polkit-kde-agent-1/APKBUILD
@@ -4,7 +4,7 @@ pkgname=polkit-kde-agent-1
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Daemon providing a polkit authentication UI for KDE"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later"
 depends="polkit-elogind"
