--- a/community/powerdevil/APKBUILD
+++ b/community/powerdevil/APKBUILD
@@ -4,7 +4,7 @@ pkgname=powerdevil
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Manages the power consumption settings of a Plasma Shell"
-arch="all"
+arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later AND (LGPL-2.1-only OR LGPL-3.0-only)"
 depends="upower"
