--- a/testing/bazel/APKBUILD
+++ b/testing/bazel/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=bazel
 pkgver=2.0.0
-pkgrel=4
+pkgrel=5
 pkgdesc="A fast, scalable, multi-language and extensible build system"
 url="https://bazel.build"
 arch="x86_64"
 license="Apache-2.0"
-depends="libarchive openjdk8 zip unzip"
-makedepends="bash python3 linux-headers protobuf"
+depends="bash libarchive openjdk8 zip unzip"
+makedepends="python3 linux-headers protobuf"
 options="!strip"
 subpackages="
 	$pkgname-doc
