--- a/community/firefox-esr/APKBUILD
+++ b/community/firefox-esr/APKBUILD
@@ -5,9 +5,8 @@ pkgver=68.4.1
 pkgrel=0
 pkgdesc="Firefox web browser - Extended Support Release"
 url="https://www.mozilla.org/en-US/firefox/organizations/"
-# limited by rust and cargo
-arch="x86_64 aarch64"
-license="GPL LGPL MPL"
+arch="all !s390" # limited by rust and cargo
+license="GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MPL-2.0"
 makedepends="
 	alsa-lib-dev
 	autoconf2.13
@@ -64,6 +63,7 @@ source="https://ftp.mozilla.org/pub/firefox/releases/${pkgver}esr/source/firefox
 	fix-rust-target.patch
 	fix-webrtc-glibcisms.patch
 	fix-sandbox-membarrier.patch
+	fd6847c9416f9eebde636e21d794d25d1be8791d.patch
 
 	firefox.desktop
 	firefox-safe.desktop"
@@ -196,10 +196,46 @@ build() {
 	export LDFLAGS="$LDFLAGS -Wl,-rpath,${_mozappdir}"
 
 	case "$CARCH" in
+		x86)
+			# disable-elf-hack: exists only on arm, x86, x86_64
+			_arch_config="--disable-elf-hack"
+			export RUST_TARGET="i686-unknown-linux-musl"
+			;;
 		x86_64)
 			# disable-elf-hack: exists only on arm, x86, x86_64
 			_arch_config="--disable-elf-hack"
+			export RUST_TARGET="$CTARGET"
 			;;
+		aarch64)
+			export RUST_TARGET="aarch64-unknown-linux-musl"
+			;;
+		armv7)
+			# disable-elf-hack: exists only on arm, x86, x86_64
+			_arch_config="--disable-elf-hack"
+			export RUST_TARGET="armv7-unknown-linux-musleabihf"
+			;;
+		armhf)
+			# disable-elf-hack: exists only on arm, x86, x86_64
+			_arch_config="--disable-elf-hack"
+			export RUST_TARGET="arm-unknown-linux-musleabihf"
+			;;
+		ppc64le)
+			export RUST_TARGET="powerpc64le-unknown-linux-musl"
+			;;
+	esac
+
+	# FF doesn't have SIMD available on these arches.
+	case "$CARCH" in
+		armhf|armv7)
+			_rust_simd="--disable-rust-simd"
+			_low_mem_flags="--disable-debug-symbols --disable-debug"
+			export RUSTFLAGS="$RUSTFLAGS -C debuginfo=0"
+			;;
+		x86)
+			_low_mem_flags="--disable-debug-symbols --disable-debug"
+			export RUSTFLAGS="$RUSTFLAGS -C debuginfo=0"
+			;;
+		*) _rust_simd="--enable-rust-simd" ;;
 	esac
 
 	../configure \
@@ -224,8 +260,9 @@ build() {
 		--enable-system-ffi \
 		--enable-system-sqlite \
 		--enable-ffmpeg \
+		$_rust_simd \
+		$_low_mem_flags \
 		--enable-hardening \
-		--enable-rust-simd \
 		\
 		--with-system-bz2 \
 		--with-system-icu \
@@ -304,8 +341,9 @@ sha512sums="8dd85096f1223b2ab396cc3b89a9f1b113f01ce8919af08a278d077cc4380c108a66
 a4a3e062661bda64d502d426c480ac9645345860118de9df9ffe6e0597738c70c11e5cdef2d4fd12c5e2ee30a09310159230524655a419a4f7e4eeeb0f3c06b0  mallinfo.patch
 454ea3263cabce099accbdc47aaf83be26a19f8b5a4568c01a7ef0384601cf8315efd86cd917f9c8bf419c2c845db89a905f3ff9a8eb0c8e41042e93aa96a85c  disable-moz-stackwalk.patch
 e0df4fc649012f023443ce9165da29d36459dbca5df64a31008b28d96264fba909858de36d0cf1b1cb1aab898342413f0cd77c90ebe21d1f9a0504631d6d1d0e  fix-musl.patch
-7903987b4b661286de03c6940bf67aaed6d78c9adc57680413407a84a1f1f26aaded35e6d53ea6ad527b474968b343d844e81e16d777c0e29b830b51aa2ca8c3  fix-rust-target.patch
+1bf1f579ced0ca47d156eb45962114f9867cf224c2ba34dfc106227648322ecf729243d2a6e84b72cb011abadc36ed84990960bded764fd4243fc9cb22084ce5  fix-rust-target.patch
 d35cacb9ede80e6bfbef0709823e536dddfb1c02d776275b0b7adb5969e9927d8c6117df96873569c3f3db0a18ee5db24f8086a9311a05077892be43a3dd8d79  fix-webrtc-glibcisms.patch
 f85f2c19c3dafab915bcb40e580fc442fd9eab5916696849edf0b105c758dd807dfe23a6479935613c81496711eb377c73227c03eb8582204c3442a4d0e397a2  fix-sandbox-membarrier.patch
+60845dcb034b2c4459c30f7d5f25c8176cf42df794e2cc0e86c3e2abb6541c24b962f3a16ca70a288d4d6f377b68d00b2904b22463108559612053d835d9bff1  fd6847c9416f9eebde636e21d794d25d1be8791d.patch
 f3b7c3e804ce04731012a46cb9e9a6b0769e3772aef9c0a4a8c7520b030fdf6cd703d5e9ff49275f14b7d738fe82a0a4fde3bc3219dff7225d5db0e274987454  firefox.desktop
 5dcb6288d0444a8a471d669bbaf61cdb1433663eff38b72ee5e980843f5fc07d0d60c91627a2c1159215d0ad77ae3f115dcc5fdfe87e64ca704b641aceaa44ed  firefox-safe.desktop"
