testing/zfs-auto-snapshot: modernize abuild

--- a/testing/zfs-auto-snapshot/APKBUILD
+++ b/testing/zfs-auto-snapshot/APKBUILD
@@ -5,23 +5,21 @@ pkgver=1.2.4
 pkgrel=1
 pkgdesc="ZFS Automatic Snapshot Service for Linux"
 url="https://github.com/zfsonlinux/zfs-auto-snapshot"
-arch="noarch !armhf !armv7"
+arch="noarch !armhf !armv7" # limited by zfs
 license="GPL-2.0-or-later"
 depends="zfs"
 checkdepends="checkbashisms"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/zfsonlinux/$pkgname/archive/upstream/${pkgver}.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/zfsonlinux/zfs-auto-snapshot/archive/upstream/$pkgver.tar.gz
 	0001-alpine.patch
 	"
 builddir="$srcdir/$pkgname-upstream-$pkgver"
 
 check() {
-	cd "$builddir"
 	checkbashisms src/zfs-auto-snapshot.sh
 }
 
 package() {
-	cd "$builddir"
 	make install PREFIX="/usr" DESTDIR="$pkgdir"
 }
 
