testing/sssd: modernize
bump to trigger rebuild with new libs

--- a/testing/sssd/APKBUILD
+++ b/testing/sssd/APKBUILD
@@ -1,12 +1,13 @@
 # Contributor: Vince Mele <vmele@inoc.com>
+# Contributor: Henrik Riomar <henrik.riomar@gmail.com>
 # Maintainer: Vince Mele <vmele@inoc.com>
 pkgname=sssd
 pkgver=1.16.3
-pkgrel=5
+pkgrel=6
 pkgdesc="System Security Services Daemon"
 url="https://pagure.io/SSSD/sssd"
 arch="x86_64"
-license="GPL-3.0"
+license="GPL-3.0-or-later"
 
 # TODO: the full test suite depends on these
 #	but does not pass.
@@ -49,9 +50,8 @@ makedepends="
 	krb5-dev
 	keyutils-dev
 	"
-install=""
 subpackages="$pkgname-dev $pkgname-openrc"
-source="https://releases.pagure.org/SSSD/$pkgname/$pkgname-$pkgver.tar.gz
+source="https://releases.pagure.org/SSSD/sssd/sssd-$pkgver.tar.gz
 	0001-makefile.patch
 	0002-src.patch
 	0003-alpine.patch
@@ -59,17 +59,13 @@ source="https://releases.pagure.org/SSSD/$pkgname/$pkgname-$pkgver.tar.gz
 	nss.h
 	cifsidmap.h
 	"
-builddir="$srcdir/$pkgname-$pkgver"
-
 prepare() {
 	default_prepare
-	cd "$builddir"
 	cp $srcdir/nss.h $srcdir/cifsidmap.h $builddir/src/
 	autoreconf -i
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--prefix=/usr \
 		--sbindir=/usr/sbin \
@@ -97,24 +93,21 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-
-	make -j1 DESTDIR=$pkgdir install
+	make -j1 DESTDIR="$pkgdir" install
 
 	# Remove files we don't want to package
-	find "$pkgdir" -name '*.la' -delete
-	find "$pkgdir" -name '*.pyc' -delete
-	find "$pkgdir" -name '*.egg-info' -delete
+	find ${pkgdir:?} -name '*.la' -delete
+	find ${pkgdir:?} -name '*.pyc' -delete
+	find ${pkgdir:?} -name '*.egg-info' -delete
 
-	rm -rf "$pkgdir"/usr/share
-	rm -rf "$pkgdir"/lib
-	rm -rf "$pkgdir"/run
-	rm -rf "$pkgdir"/usr/lib/ldb/modules/ldb/memberof.la
+	rm -rf ${pkgdir:?}/usr/share
+	rm -rf ${pkgdir:?}/lib
+	rm -rf ${pkgdir:?}/run
+	rm -rf ${pkgdir:?}/usr/lib/ldb/modules/ldb/memberof.la
 }
 
 sha512sums="6165923f652f624bbe3ddc625ae682c4867eb7a20652d0cf74bbb8dda2307c917d3189ede26fd21a4fb5fd5926149271a65fa09f3affe928029ed99e6422b728  sssd-1.16.3.tar.gz
