main/libsecret: upgrade to 0.20.0

--- a/main/libsecret/APKBUILD
+++ b/main/libsecret/APKBUILD
@@ -1,38 +1,47 @@
-# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+# Contributor: Natanael Copa <ncopa@alpinelinux.org>
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=libsecret
-pkgver=0.19.1
+pkgver=0.20.0
 pkgrel=0
 pkgdesc="Library for storing and retrieving passwords and other secrets"
 url="https://wiki.gnome.org/Projects/Libsecret"
 arch="all"
 license="LGPL-2.0-or-later"
 makedepends="glib-dev intltool libxslt-dev docbook-xsl libgcrypt-dev
-	gobject-introspection-dev vala"
+	gobject-introspection-dev vala meson"
+checkdepends="py3-dbus py3-gobject3 xvfb-run dbus-x11 gjs"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://download.gnome.org/sources/libsecret/${pkgver%.*}/libsecret-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/libsecret/${pkgver%.*}/libsecret-$pkgver.tar.xz
+	45.patch
+	support-static-lib.patch"
+
+# Missing check dependency: gjs
+case "$CARCH" in
+	s390x) options="!check" ;;
+esac
 
 build() {
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
+	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--infodir=/usr/share/info \
 		--localstatedir=/var \
-	make
+		--default-library=both \
+		--buildtype=debugoptimized \
+		-Dgtk_doc=false \
+		output
+	ninja -C output
+}
+
+check() {
+	xvfb-run ninja -C output test
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
-static() {
-	pkgdesc="Static files for $pkgname"
 
-	mkdir -p "$subpkgdir"/usr/lib
-	mv "$pkgdir"/usr/lib/*.a "$subpkgdir"/usr/lib/
-	chmod -x "$subpkgdir"/usr/lib/*.a
-}
-
-sha512sums="134f98f09a1cc7c61b9011b2fb35900d9beccfc06d978f1ffab8b5286dc6caa176832e55e3bed498c6f3526f6f34998307f67cf7accc4c79e9abf1c17cc9c7c2  libsecret-0.19.1.tar.xz"
+sha512sums="13e89dddf578f79b43a44287a2bd8789cc028b53dc60b9d8ef40d2e51d9b4ada9388caa87517834634042304ece0b4fcec95d16387d2e9dc08d2b2f33073543d  libsecret-0.20.0.tar.xz
+00475d585e37e591d61b27d4ae8485a976a548368e02fca27f148c025e67f8120b4c23f0f62dbf162eca911e0342747d2234eb5c9e0e16b2fb46bfc818e216ff  45.patch
+63769061674fb0227c00975303699fa9c6685accb177ae738b601c58547eedfdaf78f4cbb152835dda6ccbb771004f361b402d88eff8e51fc3c8563b71180aeb  support-static-lib.patch"
