--- a/community/waybar/APKBUILD
+++ b/community/waybar/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Luca Weiss <luca@z3ntu.xyz>
 pkgname="waybar"
 pkgver="0.9.0"
-pkgrel=0
+pkgrel=1
 pkgdesc="Highly customizable Wayland bar for Sway and Wlroots based compositors"
 url="https://github.com/Alexays/Waybar/"
 arch="all"
 license="MIT"
 depends="ttf-font-awesome"
 makedepends="meson gtkmm3-dev jsoncpp-dev spdlog-dev fmt-dev libinput-dev
-	libnl3-dev pulseaudio-dev libmpdclient-dev eudev-dev scdoc"
+	libnl3-dev pulseaudio-dev libmpdclient-dev eudev-dev scdoc gtk-layer-shell-dev"
 subpackages="$pkgname-doc"
 source="Waybar-$pkgver.tar.gz::https://github.com/Alexays/Waybar/archive/$pkgver.tar.gz
 	cassert.patch
