--- a/main/libvirt/APKBUILD
+++ b/main/libvirt/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=libvirt
 pkgver=5.9.0
 _ver="${pkgver/_rc/-rc}"
-pkgrel=0
+pkgrel=1
 pkgdesc="A virtualization API for several hypervisor and container systems"
 url="https://libvirt.org/"
 arch="all"
@@ -31,6 +31,7 @@ source="https://libvirt.org/sources/$pkgname-$pkgver.tar.xz
 	virtlockd.initd
 	musl-fix-includes.patch
 	stderr-fix.patch
+	fix-migration-without-params.patch
 	"
 if [ "$CARCH" = "x86_64" ]; then
 	subpackages="$subpackages $pkgname-xen"
@@ -185,4 +186,5 @@ sha512sums="3c7760053c5aabf8b3662f48f21a25fd1005ba8871bb51f78ff2b0ce4053c7bebc72
 36b85f473d292be8df415256d01a562131d8ae61450ba3893658090a12d589ca32215382f56f286a830b4e59ffd98fbe1d92004f2ce14ca0834451b943cd8f2f  virtlogd.initd
 a4c4d26e4111931acbe7594451bf963a36c8db33c64b1bc447ab4758bb92803510bebee0511d6bc16ba80c289ab6f87e74377d47bf560412f9adb9c161a206d9  virtlockd.initd
 dfe042c596028125bf8548115de2922683829c4716f6b0efb8efc38518670e3e848481661b9714bb0664c1022b87e8f3c0773611fe10187b0bc588e2336ada0c  musl-fix-includes.patch
-d32551d56eae2c33bab7571964f76421336967918c293cd1d18fc66626a7ead3551b5672a9e3fc3d8b7bca82cc0abb17e428ee8271d04d73bc06fd16309918b3  stderr-fix.patch"
+d32551d56eae2c33bab7571964f76421336967918c293cd1d18fc66626a7ead3551b5672a9e3fc3d8b7bca82cc0abb17e428ee8271d04d73bc06fd16309918b3  stderr-fix.patch
+d5343e5287af618957d33101d025ee0a3cd8fd7e5da79eca94dbf52261d70762bd40bdc294aa06f16e909c762948024feb4b6a0e8aeb72ef535c5cf11f475576  fix-migration-without-params.patch"
