--- a/main/xvfb-run/APKBUILD
+++ b/main/xvfb-run/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=xvfb-run
 pkgver=1.20.4
-pkgrel=0
+pkgrel=1
 pkgdesc="A wrapper for the Xvfb command which simplifies the task of running commands."
 url="https://salsa.debian.org/xorg-team/xserver/xorg-server/tree/debian-unstable/debian/local"
 arch="noarch"
 license="GPL-2.0-or-later"
 options="!check" # No test suite
-depends="xvfb"
+depends="xvfb coreutils"
 subpackages="$pkgname-doc"
 source="https://salsa.debian.org/xorg-team/xserver/xorg-server/raw/xorg-server-2_$pkgver-1/debian/local/xvfb-run
 	https://salsa.debian.org/xorg-team/xserver/xorg-server/raw/xorg-server-2_$pkgver-1/debian/local/xvfb-run.1
