--- a/community/extra-cmake-modules/APKBUILD
+++ b/community/extra-cmake-modules/APKBUILD
@@ -6,7 +6,7 @@ pkgver=5.66.0
 pkgrel=0
 pkgdesc="Extra CMake modules"
 url="https://projects.kde.org/projects/kdesupport/extra-cmake-modules"
-arch="noarch"
+arch="noarch !armhf" # qtdeclarative
 license="BSD-3-Clause"
 depends="cmake"
 makedepends="py3-sphinx"
