community/karchive: disable on armhf due to qtdeclarative

--- a/community/karchive/APKBUILD
+++ b/community/karchive/APKBUILD
@@ -4,7 +4,7 @@ pkgname=karchive
 pkgver=5.66.0
 pkgrel=0
 pkgdesc="Qt 5 addon providing access to numerous types of archives"
-arch="all"
+arch="all !armhf" # qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-only AND LGPL-2.1-or-later"
 depends_dev="bzip2-dev xz-dev"
