main/gcc: let gcc-gnat provide gcc-gnat-bootstrap
this is so we can trck abuild to pull in gcc-gnat as a build time
dependency despite it is a subpackage.

we do similar for go.

--- a/main/gcc/APKBUILD
+++ b/main/gcc/APKBUILD
@@ -586,6 +586,7 @@ libgnat() {
 gnat() {
 	pkgdesc="Ada support for GCC"
 	depends="gcc=$_gccrel"
+	provides="$pkgname-gnat-bootstrap"
 	[ "$CHOST" = "$CTARGET" ] && depends="$depends libgnat=$_gccrel"
 
 	mkdir -p "$subpkgdir"/$_gcclibexec \
