community/ldap-passwd-webui: fix depends on py-waitress
This is broken since 8617b6bbbe1953d0ce3fb75309748810316ad68b by @Leo.

--- a/community/ldap-passwd-webui/APKBUILD
+++ b/community/ldap-passwd-webui/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=ldap-passwd-webui
 pkgver=2.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Very simple web interface for changing password stored in LDAP or Active Directory (Samba 4 AD)"
 url="https://github.com/jirutka/ldap-passwd-webui"
 arch="noarch"
@@ -28,7 +28,7 @@ package() {
 
 waitress() {
 	pkgdesc="Runscript for ldap-passwd-webui using Waitress WSGI server"
-	depends="$pkgname=$pkgver-r$pkgrel py-waitress"
+	depends="$pkgname=$pkgver-r$pkgrel py3-waitress"
 
 	mkdir -p "$subpkgdir"/etc/init.d
 	ln -s waitress "$subpkgdir"/etc/init.d/$pkgname
