community/coreaction: upgrade to 2.8.0

--- a/community/coreaction/APKBUILD
+++ b/community/coreaction/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coreaction
-pkgver=2.7.1
+pkgver=2.8.0
 pkgrel=0
 pkgdesc="A side bar for showing widgets from the CoreApps family."
 arch="all"
 url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
-makedepends="qt5-qtbase-dev libcprime-dev libcsys-dev"
+makedepends="qt5-qtbase-dev libcprime-dev libcsys-dev qt5-qtsvg-dev"
 source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coreaction/-/archive/v$pkgver/coreaction-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="03594b101ffa38b28d98b7055d3cd940ad3551d1955b3f70f709f730f03b5a7e0da71fab4f3c92dc876631df41783b1f0062abcc8e65974990eb897a625d6445  coreaction-2.7.1.tar.gz"
+sha512sums="80c248e561726761773d67b5ca928b236df0baf7cfcfaf003999071635f2c21df17120a19478219eebdbd85b08621ff2960e01bb41ba91e6e4549670e8986050  coreaction-2.8.0.tar.gz"
