--- a/community/py3-waitress/APKBUILD
+++ b/community/py3-waitress/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=py3-waitress
 _pkgname=waitress
 pkgver=1.3.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A Python3 WSGI server"
 options="!check" # Test ERRORS out, fails to resolve address
 url="https://github.com/Pylons/waitress"
@@ -11,6 +11,8 @@ arch="noarch"
 license="ZPL-2.1"
 checkdepends="py3-nose"
 makedepends="py3-setuptools"
+provides="py-waitress=$pkgname-r$pkgrel"  # for backward compatibility
+replaces="py-waitress"  # for backward compatibility
 subpackages="$pkgname-openrc"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz
 	waitress.initd
