main/xen: add secinfo

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -153,6 +153,12 @@ options="!strip"
 #     - CVE-2019-18422 XSA-303
 #     - CVE-2018-12207 XSA-304
 #     - CVE-2019-11135 XSA-305
+#     - CVE-2019-19579 XSA-306
+#     - CVE-2019-19582 XSA-307
+#     - CVE-2019-19583 XSA-308
+#     - CVE-2019-19578 XSA-309
+#     - CVE-2019-19580 XSA-310
+#     - CVE-2019-19577 XSA-311
 
 case "$CARCH" in
 x86*)
