testing/sssd: revert bad revert from the last commit
This partially reverts commit 0ac93488952f (testing/sssd: revert bad
revert from the last commit").

Removing quotes around $pkgdir is not improvement at all; it should
be always quoted, to be safe if $pkgdir contains spaces.

Removing contributrs without first checking git log is not good.

--- a/testing/sssd/APKBUILD
+++ b/testing/sssd/APKBUILD
@@ -1,8 +1,9 @@
 # Contributor: Vince Mele <vmele@inoc.com>
+# Contributor: Henrik Riomar <henrik.riomar@gmail.com>
 # Maintainer: Vince Mele <vmele@inoc.com>
 pkgname=sssd
 pkgver=1.16.3
-pkgrel=6
+pkgrel=7
 pkgdesc="System Security Services Daemon"
 url="https://pagure.io/SSSD/sssd"
 arch="x86_64"
@@ -50,7 +51,7 @@ makedepends="
 	keyutils-dev
 	"
 subpackages="$pkgname-dev $pkgname-openrc"
-source="https://releases.pagure.org/SSSD/$pkgname/$pkgname-$pkgver.tar.gz
+source="https://releases.pagure.org/SSSD/sssd/sssd-$pkgver.tar.gz
 	0001-makefile.patch
 	0002-src.patch
 	0003-alpine.patch
@@ -58,8 +59,6 @@ source="https://releases.pagure.org/SSSD/$pkgname/$pkgname-$pkgver.tar.gz
 	nss.h
 	cifsidmap.h
 	"
-builddir="$srcdir/$pkgname-$pkgver"
-
 prepare() {
 	default_prepare
 	cp "$srcdir"/nss.h "$srcdir"/cifsidmap.h "$builddir"/src/
@@ -98,17 +97,15 @@ check() {
 }
 
 package() {
-	make -j1 DESTDIR=$pkgdir install
+	make -j1 DESTDIR="$pkgdir" install
 
 	# Remove files we don't want to package
 	find "$pkgdir" -name '*.la' -delete
 	find "$pkgdir" -name '*.pyc' -delete
 	find "$pkgdir" -name '*.egg-info' -delete
 
-	rm -rf "$pkgdir"/usr/share
-	rm -rf "$pkgdir"/lib
-	rm -rf "$pkgdir"/run
-	rm -rf "$pkgdir"/usr/lib/ldb/modules/ldb/memberof.la
+	rm -r "$pkgdir"/usr/share
+	rm -r "$pkgdir"/run
 }
 
 sha512sums="6165923f652f624bbe3ddc625ae682c4867eb7a20652d0cf74bbb8dda2307c917d3189ede26fd21a4fb5fd5926149271a65fa09f3affe928029ed99e6422b728  sssd-1.16.3.tar.gz
