community/perl-template-toolkit: upgrade to 3.004

--- a/community/perl-template-toolkit/APKBUILD
+++ b/community/perl-template-toolkit/APKBUILD
@@ -3,43 +3,38 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-template-toolkit
 _pkgreal=Template-Toolkit
-pkgver=3.003
+pkgver=3.004
 pkgrel=0
 pkgdesc="comprehensive template processing system"
-url="http://search.cpan.org/dist/Template-Toolkit/"
+url="https://metacpan.org/release/Template-Toolkit"
 arch="all"
-license="GPL PerlArtistic"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 cpandepends="perl-appconfig"
-cpanmakedepends="   "
 depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+makedepends="perl-dev"
 subpackages="$pkgname-doc"
-source="https://cpan.metacpan.org/authors/id/A/AT/ATOOMIC/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/A/AT/ATOOMIC/Template-Toolkit-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
 	default_prepare
 
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-        cd "$builddir"
-        make test
+	make test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="a8b7b2baf203d44165c305cabcc2452d95a85f0eec45c0948a0b83a8f671c805a276237bb74d5d8f47b2b59b1490d7ae389734404e7b7f6827f9f34a37d17d78  Template-Toolkit-3.003.tar.gz"
+sha512sums="3513203f4f291d120671f39630c6274e9dc8bdc94cec92347691fb4a973d937002716c6d7c6265f93577ea9d80bc97f7bab5d4c43d28705f4ab411ac0e942411  Template-Toolkit-3.004.tar.gz"
