--- a/main/ipset/APKBUILD
+++ b/main/ipset/APKBUILD
@@ -1,21 +1,19 @@
 # Contributor: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 # Maintainer: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 pkgname=ipset
-pkgver=7.4
+pkgver=7.5
 pkgrel=0
 pkgdesc="Manage Linux IP sets"
 url="http://ipset.netfilter.org/"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-only"
 depends_dev="libmnl-dev"
 makedepends="$depends_dev automake autoconf libtool linux-headers"
 subpackages="$pkgname-dev $pkgname-doc"
 source="http://ipset.netfilter.org/ipset-$pkgver.tar.bz2
 	ipset.initd"
 
-builddir="$srcdir/$pkgname-$pkgver"
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -25,7 +23,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make install DESTDIR=$pkgdir
 
 	mkdir -p "$pkgdir/etc/init.d" \
@@ -33,5 +30,5 @@ package() {
 	install -m 755 "$startdir/ipset.initd" "$pkgdir/etc/init.d/ipset"
 }
 
-sha512sums="b155ced6be88aabd38c2402604bac37ba898aeae50c2d5a7d888d1b33b536b4551387826a4f76878ebb10e97ffaca08245b5ed8a5e3c431cc224b23cbb86a196  ipset-7.4.tar.bz2
+sha512sums="97e2a42bb33dfd2d9c5d258595e4be670d961ce3f5fa537ffb32b748168324f4e572047f026096c142e3a1f5a88caa26da455cbc067121dc9140f79321f272aa  ipset-7.5.tar.bz2
 c7d3344ce879ff3b21f9e30a00d49a41cbd68172aec1a933a4b501dded54e3c57615386850901da22c652a34bcbe39caac86a3a0447da24bae29b40632153239  ipset.initd"
