--- a/testing/thunderbird/APKBUILD
+++ b/testing/thunderbird/APKBUILD
@@ -5,10 +5,10 @@ pkgname=thunderbird
 pkgver=68.4.1
 _pkgver=$pkgver
 _xulver=$pkgver
-pkgrel=0
+pkgrel=1
 pkgdesc="Thunderbird email client"
 url="https://www.thunderbird.net/"
-arch="x86_64 aarch64" # limited by rust and cargo
+arch="all !s390x" # limited by rust and cargo
 license="GPL-3.0-or-later AND LGPL-2.1-or-later AND MPL-2.0"
 options="!check !strip"
 depends="
@@ -89,6 +89,7 @@ source="https://ftp.mozilla.org/pub/thunderbird/releases/$pkgver/source/thunderb
 	fix-rust-target.patch
 	fix-webrtc-glibcisms.patch
 	fix-sandbox-membarrier.patch
+	fd6847c9416f9eebde636e21d794d25d1be8791d.patch
 	thunderbird.desktop
 	"
 _mozappdir=/usr/lib/$pkgname
@@ -140,6 +141,11 @@ build() {
 	export LDFLAGS="$LDFLAGS -Wno-subobject-linkage"
 
 	case "$CARCH" in
+		x86)
+			# disable-elf-hack: exists only on arm, x86, x86_64
+			_arch_config="--disable-elf-hack"
+			export RUST_TARGET="i686-unknown-linux-musl"
+			;;
 		x86_64)
 			# disable-elf-hack: exists only on arm, x86, x86_64
 			_arch_config="--disable-elf-hack"
@@ -148,6 +154,33 @@ build() {
 		aarch64)
 			export RUST_TARGET="aarch64-unknown-linux-musl"
 			;;
+		armv7)
+			# disable-elf-hack: exists only on arm, x86, x86_64
+			_arch_config="--disable-elf-hack"
+			export RUST_TARGET="armv7-unknown-linux-musleabihf"
+			;;
+		armhf)
+			# disable-elf-hack: exists only on arm, x86, x86_64
+			_arch_config="--disable-elf-hack"
+			export RUST_TARGET="arm-unknown-linux-musleabihf"
+			;;
+		ppc64le)
+			export RUST_TARGET="powerpc64le-unknown-linux-musl"
+			;;
+	esac
+
+	# TB doesn't have SIMD available on these arches.
+	case "$CARCH" in
+		armhf|armv7)
+			_rust_simd="--disable-rust-simd"
+			_low_mem_flags="--disable-debug-symbols --disable-debug"
+			export RUSTFLAGS="$RUSTFLAGS -C debuginfo=0"
+			;;
+		x86)
+			_low_mem_flags="--disable-debug-symbols --disable-debug"
+			export RUSTFLAGS="$RUSTFLAGS -C debuginfo=0"
+			;;
+		*) _rust_simd="--enable-rust-simd" ;;
 	esac
 
 	../configure \
@@ -178,8 +211,9 @@ build() {
 		--enable-system-ffi \
 		--enable-system-sqlite \
 		--enable-ffmpeg \
+		$_rust_simd \
+		$_low_mem_flags \
 		--enable-hardening \
-		--enable-rust-simd \
 		\
 		--with-system-bz2 \
 		--with-system-icu \
@@ -271,7 +305,8 @@ sha512sums="16cccbc2313472e6312e842a28079782238cb22e72b324bebaffefa4a2fe68fec9f2
 a4a3e062661bda64d502d426c480ac9645345860118de9df9ffe6e0597738c70c11e5cdef2d4fd12c5e2ee30a09310159230524655a419a4f7e4eeeb0f3c06b0  mallinfo.patch
 454ea3263cabce099accbdc47aaf83be26a19f8b5a4568c01a7ef0384601cf8315efd86cd917f9c8bf419c2c845db89a905f3ff9a8eb0c8e41042e93aa96a85c  disable-moz-stackwalk.patch
 e0df4fc649012f023443ce9165da29d36459dbca5df64a31008b28d96264fba909858de36d0cf1b1cb1aab898342413f0cd77c90ebe21d1f9a0504631d6d1d0e  fix-musl.patch
-7903987b4b661286de03c6940bf67aaed6d78c9adc57680413407a84a1f1f26aaded35e6d53ea6ad527b474968b343d844e81e16d777c0e29b830b51aa2ca8c3  fix-rust-target.patch
+1bf1f579ced0ca47d156eb45962114f9867cf224c2ba34dfc106227648322ecf729243d2a6e84b72cb011abadc36ed84990960bded764fd4243fc9cb22084ce5  fix-rust-target.patch
 d35cacb9ede80e6bfbef0709823e536dddfb1c02d776275b0b7adb5969e9927d8c6117df96873569c3f3db0a18ee5db24f8086a9311a05077892be43a3dd8d79  fix-webrtc-glibcisms.patch
 f85f2c19c3dafab915bcb40e580fc442fd9eab5916696849edf0b105c758dd807dfe23a6479935613c81496711eb377c73227c03eb8582204c3442a4d0e397a2  fix-sandbox-membarrier.patch
+60845dcb034b2c4459c30f7d5f25c8176cf42df794e2cc0e86c3e2abb6541c24b962f3a16ca70a288d4d6f377b68d00b2904b22463108559612053d835d9bff1  fd6847c9416f9eebde636e21d794d25d1be8791d.patch
 95a2b1deb4f6c90750fdd2bfe8ca0a7879a5b267965091705a6beb0a0a4b1ccad75d11df7b9885543ca4232ff704e975c6946f4c11804cb71c471e06f9576001  thunderbird.desktop"
