community/httpie: upgrade to 2.0.0

--- a/community/httpie/APKBUILD
+++ b/community/httpie/APKBUILD
@@ -2,14 +2,16 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 # Contributor: Daniel Isaksen <d@duniel.no>
 pkgname=httpie
-pkgver=1.0.3
-pkgrel=1
+pkgver=2.0.0
+pkgrel=0
 pkgdesc="A CLI, cURL-like tool"
+options="!check" # Requires 'pytest-httpbin'
 url="https://httpie.org/"
 arch="noarch"
 license="BSD-3-Clause"
 depends="python3 py3-requests py3-pygments"
 makedepends="py3-setuptools"
+checkdepends="py3-pytest"
 source="https://files.pythonhosted.org/packages/source/h/httpie/httpie-$pkgver.tar.gz"
 
 # secfixes:
@@ -17,7 +19,7 @@ source="https://files.pythonhosted.org/packages/source/h/httpie/httpie-$pkgver.t
 #     - CVE-2019-10751
 
 check() {
-	python3 setup.py check
+	PYTHONPATH="$PWD/build/lib" py.test-3
 }
 
 build() {
@@ -28,4 +30,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="b51779e0ec8f24108ee3f4bf690dc9dfddafff42509d1aa3d13ac12d65a93e02aad9644dc10134ebdbebf949b250cb288650a4dad3d382143e9ad3b9b0ac8c16  httpie-1.0.3.tar.gz"
+sha512sums="9dc516bf3f41fda2f508133eef268a1a5208ecb56ff6f767d391a72a72dfdccd00ff4456c96a0b2070cab162983cdd51444328bcbb517e111582689e6a191b59  httpie-2.0.0.tar.gz"
