main/perl-path-tiny: upgrade to 0.110

--- a/main/perl-path-tiny/APKBUILD
+++ b/main/perl-path-tiny/APKBUILD
@@ -3,13 +3,12 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-path-tiny
 _pkgreal=Path-Tiny
-pkgver=0.108
+pkgver=0.110
 pkgrel=0
 pkgdesc="File path utility"
 url="http://search.cpan.org/dist/Path-Tiny/"
 arch="noarch"
 license="Apache-2.0"
-cpandepends=""
 cpanmakedepends="perl-test-mockrandom perl-test-failwarnings"
 depends="$cpandepends"
 makedepends="perl-dev $cpanmakedepends"
@@ -20,26 +19,22 @@ builddir="$srcdir/$_pkgreal-$pkgver"
 prepare() {
 	default_prepare
 
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-        cd "$builddir"
-        make test
+	make test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="21cbc8ec84474a2fc14b77a2c8b659676d4842a87a7572497c0dd6ba1c2e5f91cdefa30fc9578fdc416d8c8ee4155ff302833925c1fdf9242c898ba6a0ebee13  Path-Tiny-0.108.tar.gz"
+sha512sums="ba7ddbc94268fe3d62be93b9ff8a3cae2347992ebdfa83987797290e86c8a2ce748a4f15dab05a6122c72b89af73790a62b9d64519055956775d92528b962f35  Path-Tiny-0.110.tar.gz"
